--- a/popup.html
+++ b/popup.html
@@ -41,6 +41,13 @@
       padding-bottom: 8px;
       opacity: .5;
     }
+    footer a {
+      font-weight: bold;
+      text-decoration: none;
+    }
+    footer a, footer a:visited {
+      color: blue;
+    }
     </style>
   </head>
   <body>
@@ -50,7 +57,7 @@
       <output id="speed" for="range" disabled>1.0</output>
     </main>
     <footer>
-      <strong>movit</strong> the video speed driver
+      <a title="Open Source in GitHub" target="_blank" href="https://github.com/WebReflection/movit#movit">movit</a> the video speed driver
     </footer>
     <script async src="js/popup.js"></script>
   </body>
